--- a/server/MlInternalUsers/admin/views/branches.pug
+++ b/server/MlInternalUsers/admin/views/branches.pug
@@ -1,5 +1,3 @@
-
-
 doctype html
 html
   head
@@ -30,7 +28,7 @@ html
             img(src=profilePic)
         .content_right
           h2
-            | #{firstName} #{lastName} an '#{communityType}' on #{space}
+            | #{firstName} #{lastName} / an '#{communityType}' on #{space}
             span.m_red m
             span.m_yel oo
             span.m_red lya
@@ -43,15 +41,8 @@ html
                 -else
                  a.ms_btn_ye(href= list.link) #{list.name}
             li
-          p
-             | #{aboutDiscription}
-          h3 Past winners have included:
-          .img_list
-            img(src='images/list_img_01.png')
-            img(src='images/list_img_01.png')
-            img(src='images/list_img_01.png')
-            img(src='images/list_img_01.png')
-            img(src='images/list_img_01.png')
+          .ms_branches_banner
+            img(src='images/branches_banner.jpg')
           .register_block
             p
               strong
@@ -62,7 +53,7 @@ html
             a.ms_btn_re(href='/register') Register
             br
             b
-              | on #{space}
+              | on
               span.m_red m
               span.m_yel oo
               span.m_red lya
