--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -57,7 +57,7 @@ $menuTrans:all 0.5s linear;
 .app_menu .profile_pic_in_menu{display: none;}
 /*.app_menu ul{padding:20px 6px 0px 6px;}*/
 .app_menu ul {
-  padding: 20px 0px 20px 0px;
+  padding: 20px 0px 0px 0px;
   background:$mlWhite;
   margin-bottom: -20px;
   text-align: center;
@@ -140,7 +140,7 @@ $menuTrans:all 0.5s linear;
   .ml_app_profile.profile_open>ol>li .my-ml-exit_or_logoff{ margin: 7px 0 0 4px; font-size: 18px; }
 
   .header_search{/* position: absolute;right: 90px; */}
-  .notification{/* position: absolute;right: 55px;float:right */margin-right: 55px;margin-left:10px; margin-top:-4px;}
+  .notification{/* position: absolute;right: 55px;float:right */margin-right: 55px;margin-left:10px; margin-top:0px;}
   .notification .noti_count{color: $mlBlack;background: $mlYellow; border-radius: 100%; width: 15px; height: 15px; font-size: 10px; /* padding: 5px; */ line-height: 15px; position: absolute; margin-left: 8px; top: 7px; right: 0px;}
   .app_header {
       .ml{text-shadow:none;}
@@ -543,6 +543,7 @@ background:$mlGray; position: absolute; top: 0; z-index: 100; width: 100%;
   }
 }
 .overlay {position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.8); z-index: 15; }
+.filter_overlay {position: fixed; display: none; width: 100%; height: 100%; top: 0; left: 0; right: 0; bottom: 0; background-color: rgba(0, 0, 0, 0.8); z-index: 2; }
 /* Icon 2 */
 
 #nav-icon2 {width: 37px; height: auto; position: relative; margin:17px auto 0px 8px; -webkit-transform: rotate(0deg); -moz-transform: rotate(0deg); -o-transform: rotate(0deg); transform: rotate(0deg); -webkit-transition: .5s ease-in-out; -moz-transition: .5s ease-in-out; -o-transition: .5s ease-in-out; transition: .5s ease-in-out; cursor: pointer;float:left;z-index:3; }
@@ -1977,12 +1978,12 @@ p{margin-top:10px;}
   text-align: center;
   font-size: 11px;
   padding: 3px;}
-.context_name{padding: 1px 7px;
+.context_name{padding: 0px 7px;
   color: rgb(255, 255, 255);
   line-height: 18px;
   border-radius: 2px;
   font-size: 12px;
-  margin-top: -15px;
+  margin-top: -13px;
   text-shadow: none;}
 
 .act-btn{
