--- a/client/stylesheets/login.css
+++ b/client/stylesheets/login.css
@@ -46,7 +46,7 @@
 .login_bg{text-align: center;height: 678px;overflow: hidden;position: relative;}
 .video_bg{display: block;background-image: url("../images/moolya-login-bg.jpg");background-size: cover;background-position: bottom center;display: block;position: fixed;top: 0px;left: 0px;width: 100%;height: 100%;background-repeat: no-repeat;}
 .login_bg video{display: none;}
-.app_msg{position: absolute;text-align: center;width: 828px;font-size: 11px;left: 19%;background-color: rgba(255,255,255,0.5);bottom: -33px;height: 60px;line-height: 27px;}
+.app_msg{position: absolute;text-align: center;width: 828px;font-size: 11px;left: calc(100% - 414px);background-color: rgba(255,255,255,0.5);bottom: -33px;height: 60px;line-height: 27px;}
 .app_msg:before{position: absolute; left: -29px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 30px 29px 30px 0px; border-color: transparent rgba(255,255,255,0.5) transparent transparent; top: 0px;}
 .app_msg:after{position: absolute; right: -29px; content: " "; width: 0px; height: 0px; border-style: solid; border-width: 30px 0 30px 29px; border-color: transparent transparent transparent rgba(255,255,255,0.5); top: 0px;}
 .app_msg p{margin: 0px;padding: 0px 10px;}
