added CDN url in newly added image

--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -281,9 +281,9 @@ table{background: #fff;}
 .scrollarea .scrollbar-container.active, .scrollarea .scrollbar-container:hover{background: transparent !important;}
 .vTimeline{border-left: 2px solid #67cbe5;position: absolute;top: 9px;left: 51px;}
 .vTimeline ul{margin: -7px 0px 0px -6px;}
-.vTimeline li{background: url(images/timeline_bg.png) left center no-repeat;padding-left: 15px; color: #fff;text-shadow: none; font-size: 12px; line-height: 20px;}
+.vTimeline li{background: url(https://d1mkj567hbikgo.cloudfront.net/images/timeline_bg.png) left center no-repeat;padding-left: 15px; color: #fff;text-shadow: none; font-size: 12px; line-height: 20px;}
 .vTimeline li a{text-decoration: none;color: #fff;}
-.vTimeline li.current{background: url(images/timeline_ac.png) left center no-repeat;color: #ef4647;}
+.vTimeline li.current{background: url(https://d1mkj567hbikgo.cloudfront.net/images/timeline_ac.png) left center no-repeat;color: #ef4647;}
 .vTimeline li.current a{text-decoration: none;color: #ef4647;}
 .vTimeline li.timelineLast{background: #000;margin-top: -6px;}
 .loading{position: absolute;    top: calc(50% - 30px);    left: calc(50% - 60px);}
