--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -19,7 +19,7 @@ h1,h2,h3,h4,h5,h6{font-family: 'DINPro-Regular';font-weight:normal;margin: 0px;l
 .moolya_admin .admin_header .header_top img.home{margin: 5px 0px 0px 5px;}
 .moolya_admin .admin_header .header_top img.user{margin: 5px 5px 0px 0px;}
 .moolya_admin .admin_header .header_top img.logo{height: 50px;margin: 0px;position: absolute;left: 50%;transform: translateX(-50%);margin-top: 2px;}
-.moolya_admin .admin_header .form-control{height: 35px;width: 200px;margin: 6px 51px 0px 0px;background-color: transparent;border: 2px solid #ffe144;color: #fff;background: url(../images/search_icon.png) 5px center no-repeat;padding-left: 30px;border-radius: 30px;}
+.moolya_admin .admin_header .header_search{height: 35px;width: 200px;margin: 6px 51px 0px 0px;background-color: transparent;border: 2px solid #ffe144;color: #fff;background: url(../images/search_icon.png) 5px center no-repeat;padding-left: 30px;border-radius: 30px;}
 .moolya_admin .admin_header .header_bottom{padding-top: 12px;}
 .moolya_admin .admin_header .moolya_btn{display:inline-block;background: #fff;border:0px;padding: 2px 0px 4px 12px;line-height:25px;position: relative;text-decoration: none;font-size: 14px;height: 36px;}
 .moolya_admin .admin_header .moolya_btn:after{position:absolute;right:-14px;content:" ";width: 0px;height: 0px;border-style: solid;border-width: 18px 0 18px 14px;border-color: transparent transparent transparent #fff;top: 0px;}
@@ -706,6 +706,7 @@ button:focus{outline: 0;}
 #btn-search::-moz-placeholder { /* Firefox 19+ */color: transparent;}
 #btn-search:-ms-input-placeholder { /* IE 10+ */color: transparent;}
 #btn-search:-moz-placeholder { /* Firefox 18- */color: transparent;}
+.admin_padding_wrap #btn-search{position: absolute;right: 20px;}
 #btn-search {border: none; background: url(../images/search_icon_red.png) 2px center no-repeat; z-index: 1; width: 25px; height: 25px; transition: all .25s ease-in .25s; color: transparent; line-height: 25px; /*position: absolute;  right: 27px;  top: 15px;*/}
 #btn-search:hover {cursor: pointer; }
 #btn-search:hover:focus {cursor: text; }
