--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -721,7 +721,7 @@ background:$mlGray; position: absolute; top: 0; z-index: 100; width: 100%;
       border-radius:10px;
     }
     .team_img{
-      width: 60%;height: 60%;
+      width: 70px;height: 70px;
     }
   }
   li.active{
