--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -907,7 +907,24 @@ h3{font-size:40px; text-shadow:none;font-weight: bold;}
       img{min-width:100%;}
     }
   }
-  .modal-header{border:none;padding:0px;
+.modal-content {
+  border-radius: 6px;
+  box-shadow: none;
+}
+.modal-dialog {
+  max-width: 600px;
+  margin: 30px auto;
+}
+.modal-open .modal {
+  background: rgba(75, 75, 75, 0.82);
+}
+  .modal-header{padding: 5px;
+    background: #ddd;
+    font-size: 20px;
+    border-radius: 2px 2px 0 0;
+    margin-bottom: 5px;
+    border-bottom: 1px solid #c6c6c6;
+    display:block;
     .modal-title{display:none}
     .close{background: $mlRed; border: 0px; line-height: 27px; position: absolute; text-decoration: none; font-size: 14px; height: 30px; width: 15px; color: $mlWhite;text-shadow: none;text-align: center;opacity:1;right: -1px; z-index: 99;top: -12px;
       span{display: block; margin-top: -4px; font-size: 20px;}
