--- a/server/MlInternalUsers/admin/views/about.pug
+++ b/server/MlInternalUsers/admin/views/about.pug
@@ -26,9 +26,9 @@ html
     meta(name='twitter:site', content=twitterHandle)
     meta(name='twitter:creator', content='moolya')
 
-    link(href='css/ms_styles.css', type='text/css', media='all', rel='stylesheet')
-    link(href='css/font-awesome.css', type='text/css', media='all', rel='stylesheet')
-    link(href='css/swiper.min.css', type='text/css', media='all', rel='stylesheet')
+    link(href='/css/ms_styles.css', type='text/css', media='all', rel='stylesheet')
+    link(href='/css/font-awesome.css', type='text/css', media='all', rel='stylesheet')
+    link(href='/css/swiper.min.css', type='text/css', media='all', rel='stylesheet')
   body
     script.
       window.fbAsyncInit = function () {
@@ -181,7 +181,7 @@ html
               FB.ui({
                 method: 'share',
                 display: 'popup',
-                href: 'https://stackoverflow.com/questions/26021781/testing-facebook-share-dialog-with-localhost-unable-to-resolve-object-at-url',
+                href: linkName,
               }, function (response) {
                 console.log(response);
               });
