--- a/client/stylesheets/css/moolya_app.scss
+++ b/client/stylesheets/css/moolya_app.scss
@@ -1702,16 +1702,16 @@ p{margin-top:10px;}
   }
 .form-control{color: $mlWhite;padding-top: 0px;height: 85px;
   &::-webkit-input-placeholder { /* Chrome/Opera/Safari */
-  color: #9c2929;
+  color: #fff;
   }
   &::-moz-placeholder { /* Firefox 19+ */
-    color: #9c2929;
+    color: #fff;
   }
   &:-ms-input-placeholder { /* IE 10+ */
-    color: #9c2929;
+    color: #fff;
   }
   &:-moz-placeholder { /* Firefox 18- */
-    color: #9c2929;
+    color: #fff;
   }
 }
   .bug_body{
