--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -321,7 +321,7 @@ table{background: #fff;}
 .upload_file_mask input.upload{width: 33px !important;}
 .fileUpload .ml{font-size: 18px; background: #273545; border-radius: 5px; padding: 3px 4px; text-shadow: none; color: #fff; line-height: 30px; cursor: pointer;}
 .single_icon.ml{font-size: 18px; background: #ffe144; border-radius: 5px; padding: 4px; text-shadow: none; color: #273545; cursor: pointer;margin-right: 10px;}
-.fileUpload input.upload {position: absolute;top: 0;right: 0;margin: 0;padding: 0;font-size: 20px;cursor: pointer;opacity: 0;filter: alpha(opacity=0);width: 107px;cursor: pointer; }
+.fileUpload input.upload {position: absolute;top: 0;right: 0;margin: 0;padding: 0;font-size: 20px;cursor: pointer;opacity: 0;filter: alpha(opacity=0);width: 107px;cursor: pointer; overflow: hidden; }
 .mlUpload_btn{background: #273545;padding: 0px 8px;display: block;color: #fff;text-shadow: 0px 1px 1px #333;width: 108px;    position: relative;margin-left: 15px;height: 36px;line-height: 33px;float: left;text-align: center; cursor: pointer;}
 .mlUpload_btn span{cursor: pointer;}
 a.mlUpload_btn{width: auto;margin:0px 20px;float: none;display: inline-block;}
