--- a/server/MlExternalUsers/sitemap/views/branches.pug
+++ b/server/MlExternalUsers/sitemap/views/branches.pug
@@ -1,3 +1,18 @@
-.ms_branches_banner
-     img(src='/images/branches_banner.png')
+.ms_branches
+  .branch_block
+    img(src='/images/branch_img.png')
+    h3 Head Quarters
+    p
+      | Ground floor 12A, 94 Meghdoot Nehru Place, South Delhi, New Delhi - 110017, India
+  .branch_block
+    img(src='/images/branch_img.png')
+    h3 Division Branch
+    p
+      | B, 34, MLA Colony Road Number 12, MLA Colony, Banjara Hills, Hyderabad, Telangana - 500096
+  .branch_block
+    img(src='/images/branch_img.png')
+    h3 Division Branch
+    p
+      | 22nd Floor, One Horizon Center, DLF Phase V, Golf Course Road, Sector 43, Gurgaon, Haryana - 122003
+.clear
 
