--- a/server/MlExternalUsers/sitemap/views/management.pug
+++ b/server/MlExternalUsers/sitemap/views/management.pug
@@ -23,7 +23,7 @@ else
 // Swiper Ends
 
 script(src='https://ajax.googleapis.com/ajax/libs/jquery/3.2.1/jquery.min.js')
-script(type='text/javascript', src='js/swiper.min.js')
+script(type='text/javascript', src='/js/swiper.min.js')
 script.
   var swiper = new Swiper('.swiper-container', {
     pagination: '.swiper-pagination',
@@ -39,5 +39,5 @@ script.
     $(this).parent().find('.profile_info').toggleClass('open');
     $(this).toggleClass('collapse');
   });
-script(src="js/swiper.min.js")
+script(src="/js/swiper.min.js")
 
