--- a/client/stylesheets/css/responsive.scss
+++ b/client/stylesheets/css/responsive.scss
@@ -60,6 +60,7 @@ $menuTrans:all 0.5s linear;
 	.moolya_app{
 		.RRT__panel{padding: 10px 0px 0px 0px;border:0px;}
 	}
+
 }
 @media only screen and ( max-width: 991px ){
 	.nopadding-right,  .nopadding-left{
@@ -80,4 +81,15 @@ $menuTrans:all 0.5s linear;
   position:absolute;left:7px;top:7px;height: 26px !important;border-radius: 4px;box-shadow: 0px 0px 2px rgba(0,0,0,0.5);
   img{height: 26px !important;border-radius: 4px;}
 }
+  .moolya_app .header-action-buttons {
+    text-align: center;
+    float: right;
+    margin-bottom: 0px;
+    width:auto;
+  }
+  .moolya_app .header-action-buttons li {
+    width: 85px;
+  }
+  .moolya_app .startup-logo{top:45%; transform: translateY(-45%); box-shadow: none !important;}
+  .moolya_app .startup-logo img{ width: auto !important;}
 }
