--- a/client/stylesheets/css/moolya_admin.css
+++ b/client/stylesheets/css/moolya_admin.css
@@ -287,16 +287,16 @@ table{background: #fff;}
 .vTimeline {
   /* border-left: 2px solid #67cbe5; */
   position: absolute;
-  top: 0;
+  top: 3px;
   left: 78px;
-  height: 100%;
+  height: 60px;
   overflow-y: auto;
   /* margin-left: 20px; */
   overflow-x: hidden;
-  width: 150px;
+  /*width: 150px;*/
 }
 .vTimeline ul {
-  margin: 4px 0px 0px 8px;
+  margin: 0px 0px 0px 8px;
   border-left: 2px solid #67cbe5;
   width: 100%;
 }
